force-app/main/default/objects/refedge__Reference_Note__c/refedge__Reference_Note__c.object-meta.xml
<CustomObject>
    <description>Custom Object to Store Custom Notes.</description>
    <label>Reference Note</label>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>