force-app/main/default/objects/refedge__Reference_Note__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Notes</relationshipLabel>
    <relationshipName>Reference_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>