force-app/main/default/objects/refedge__Reference_Note__c/fields/refedge__Event__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>refedge__Event__c</referenceTo>
    <relationshipLabel>Reference Notes</relationshipLabel>
    <relationshipName>Reference_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>