force-app/main/default/objects/refedge__Reference_Note__c/fields/refedge__Nomination__c.field-meta.xml
<CustomField>
    <fullName>refedge__Nomination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomination</label>
    <referenceTo>refedge__Nomination__c</referenceTo>
    <relationshipLabel>Reference Notes</relationshipLabel>
    <relationshipName>Reference_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>