force-app/main/default/objects/refedge__Reference_Note__c/fields/refedge__Note__c.field-meta.xml
<CustomField>
    <fullName>refedge__Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>