force-app/main/default/objects/refedge__Reference_Note__c/fields/refedge__Unspecified_Request__c.field-meta.xml
<CustomField>
    <fullName>refedge__Unspecified_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unspecified Request</label>
    <referenceTo>refedge__Unspecified_Request__c</referenceTo>
    <relationshipLabel>Reference Notes</relationshipLabel>
    <relationshipName>Reference_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>