force-app/main/default/objects/refedge__Reference_Note__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>refedge__Details__c</columns>
    <columns>refedge__Note_Date__c</columns>
    <columns>refedge__Note__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>refedge__Account_Request__c</columns>
    <columns>refedge__Reference_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>